force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/SVMXA360__CONF_PSCConfiguration__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Product Service Campaign Configuration Templates and Settings, as defined in Asset360 Admin Setup.</description>
    <label>PSC Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSC Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>