force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the PSC Configuration Template is active.</description>
    <inlineHelpText>Indicates whether the PSC Configuration Template is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>