force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__DeliveryBatchSize__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeliveryBatchSize__c</fullName>
    <description>This setting indicates the maximum number of PSC search results that can be considered per batch for the Delivery Output Generation Batch Process.</description>
    <label>Delivery Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>