force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>A description of the Configuration Template.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A description of the Configuration Template.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>