force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>A unique identifier of a record that can be linked with another Salesforce Org or external data source.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>A unique identifier of a record that can be linked with another Salesforce Org or external data source.</inlineHelpText>
    <label>Developer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>