force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__Email__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Email__c</fullName>
    <description>Success or failure log notifications for processes utilizing the PSC Configuration Template is sent to the email address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Success or failure log notifications for processes utilizing the PSC Configuration Template is sent to the email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>