force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__PSCMappingJSON__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PSCMappingJSON__c</fullName>
    <description>The Mapping information related to the PSC Configuration Template.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PSC Mapping JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>