force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__SearchBatchSize__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SearchBatchSize__c</fullName>
    <description>This setting indicates the maximum number of records that can be qualified and considered per batch by the PSC Search Results Batch Process, based on the search criteria defined in the PSC for the purpose of generating PSC Result Lines.</description>
    <label>Search Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>