force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/fields/SVMXA360__SearchResultsPerPSC__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SearchResultsPerPSC__c</fullName>
    <description>This setting indicates the maximum number of PSC search results that can be generated when the user performs a PSC Search. If the estimated search results exceeds this defined maximum, the “Run Search” button in the Search Criteria Card is disabled.</description>
    <label>Allowed Search Results Per PSC</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>