force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/recordTypes/SVMXA360__PSC_Configuration.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__PSC_Configuration</fullName>
    <active>true</active>
    <label>PSC Configuration</label>
</RecordType>