force-app/main/default/objects/SVMXA360__CONF_PSCConfiguration__c/recordTypes/SVMXA360__PSC_Settings.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__PSC_Settings</fullName>
    <active>true</active>
    <label>PSC Settings</label>
</RecordType>